<resources>
    <string name="app_name">CNN</string>
    <string name="cnn_indonesia_berita_terbaru_terkini_indonesia_dunia">CNN Indonesia | Berita Terbaru, Terkini Indonesia, Dunia</string>
    <string name="terbaru">Terbaru</string>
    <string name="politik">Politik</string>
    <string name="hukum">Hukum</string>
    <string name="ekonomi">Ekonomi</string>
    <string name="nasional">Nasional</string>
    <string name="internasional">Internasional</string>
    <string name="olahraga">Olahraga</string>
    <string name="teknologi">Teknologi</string>
    <string name="hiburan">Hiburan</string>
    <string name="gaya_hidup">Gaya Hidup</string>
    <string name="this_image">this_image</string>
    <string name="title">Casillas: Perjalanan Sensasional Madrid Tak Berarti Tanpa Trofi</string>
    <string name="description">Legenda Real Madrid, Iker Casillas menyebut perjalanan sensasional Los Blancos musim ini di Liga Champions tetap tak berarti bila tanpa trofi.</string>
    <string name="pub_date">2022-05-27T02:58:59.000Z</string>
    <string name="posts">posts</string>
</resources>