<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data/>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.home.HomeActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:background="@color/redBackground"
            android:gravity="center">

            <com.makeramen.roundedimageview.RoundedImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/logo_cnn_fav"
                android:layout_marginEnd="6dp"
                app:riv_corner_radius="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:text="@string/cnn_indonesia_berita_terbaru_terkini_indonesia_dunia" />

        </LinearLayout>

        <com.google.android.material.chip.ChipGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/CustomChipStyle"
                android:checked="true"
                android:text="@string/terbaru"/>

            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/CustomChipStyle"
                android:text="@string/nasional"/>

            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/CustomChipStyle"
                android:text="@string/internasional"/>

            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/CustomChipStyle"
                android:text="@string/ekonomi"/>

            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/CustomChipStyle"
                android:text="@string/olahraga"/>

            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/CustomChipStyle"
                android:text="@string/teknologi"/>

            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/CustomChipStyle"
                android:text="@string/hiburan"/>

            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/CustomChipStyle"
                android:text="@string/gaya_hidup"/>

        </com.google.android.material.chip.ChipGroup>

    </LinearLayout>

</layout>